<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/dialog_rounded_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="20dp"
        android:text="@string/add_a_picture"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/take_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:padding="17dp"
        android:text="@string/take_a_picture"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/choose_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:padding="17dp"
        android:text="@string/choose_a_picture"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@android:color/white"

        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/cancel"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

</LinearLayout>