<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
   android:background="@drawable/background_blur"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="90dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"

            android:src="@drawable/ic_info_outline_black_24dp"

            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_lock_outline_black_24dp"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:id="@+id/text_detail"

        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textStyle="italic"

        android:layout_marginEnd="20dp"
        android:layout_above="@id/text_above_button"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:lineSpacingExtra="6dp"
        android:textColor="@color/TextColor"



        android:text="@string/report_incident_detail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/text_above_button"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:lineSpacingExtra="6dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/TextColor"
        android:layout_centerInParent="true"

        android:text="@string/police_emergency_text"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="OpenIncident"
        android:layout_below="@id/text_above_button"
        android:textColor="@color/white"
        android:id="@+id/button_report"
        android:background="@drawable/button_corner_blue_white"

        android:drawableStart="@drawable/ic_camera_alt_black_24dp"

        android:ellipsize="end"
        android:padding="22dp"
        android:text="@string/report_an_incident"

        android:layout_centerInParent="true" />



</RelativeLayout>